fixing low contrast in delete collection modal

--- a/themes/atalanta/assets/scss/components/_collections.scss
+++ b/themes/atalanta/assets/scss/components/_collections.scss
@@ -1240,7 +1240,7 @@
 		}
 
 		.option2 {
-			color: #808080;
+			color: #b2b2b2;
 		}
 
 		a {
